--- a/.github/k8s/deployment.yaml
+++ b/.github/k8s/deployment.yaml
@@ -1,19 +1,12 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Service
 metadata:
-  name: nextjs-app
+  name: nextjs-service
 spec:
-  replicas: 2
   selector:
-    matchLabels:
-      app: nextjs-app
-  template:
-    metadata:
-      labels:
-        app: nextjs-app
-    spec:
-      containers:
-        - name: nextjs-app
-          image: IMAGE_PLACEHOLDER # Will be replaced in workflow
-          ports:
-            - containerPort: 3000
+    app: nextjs-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 3000
+  type: LoadBalancer
