--- a/.github/k8s/deployment.yaml
+++ b/.github/k8s/deployment.yaml
@@ -1,12 +1,21 @@
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: nextjs-service
-spec:
-  selector:
+  name: nextjs-app
+  labels:
     app: nextjs-app
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 3000
-  type: LoadBalancer
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: nextjs-app
+  template:
+    metadata:
+      labels:
+        app: nextjs-app
+    spec:
+      containers:
+        - name: nextjs-app
+          image: IMAGE_PLACEHOLDER
+          ports:
+            - containerPort: 3000
